--- a/SpectrumKeys/SpectrumKeys.vcxproj.filters
+++ b/SpectrumKeys/SpectrumKeys.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="SpectrumKeys.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Keyboard.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Keyboard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
