--- a/SpectrumKeys/SpectrumKeys.vcxproj
+++ b/SpectrumKeys/SpectrumKeys.vcxproj
@@ -113,7 +113,7 @@
       <AdditionalDependencies>SDKDLL64.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>copy $(SolutionDir)\lib\*.dll $(OutputDir)</Command>
+      <Command>copy $(SolutionDir)\lib\*.dll $(SolutionDir)\$(Platform)\$(Configuration)\</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
